[package]
name = "actix-mock-helper"
version = "0.2.0"
authors = ["Max Polun <maxpolun@gmail.com>"]
edition = "2018"
license = "ISC"
description = "Helpers for using the actix mocker actor in tests."
homepage = "https://gitlab.com/maxpolun/actix-mock-helper"
repository = "https://gitlab.com/maxpolun/actix-mock-helper"
categories = ["development-tools::testing"]
keywords = ["actix", "mock", "actor", "testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"

[dev_dependencies]
actix-rt = "1"
